--- a/static/locale/fr.json
+++ b/static/locale/fr.json
@@ -12,7 +12,7 @@
     "General info": "Informations générales",
     "Score": "Score",
     "Load more": "Charger plus",
-    "Best scores": "Meilleurs scores",
+    "Best scores": "Meilleur score",
     "Recent scores": "Scores récents",
     "Download": "Télécharger",
     "Points": "Points",
@@ -24,7 +24,7 @@
     "Difficulty": "Difficulté",
     "Yes": "Oui",
     "No": "Non",
-    "Achieved": "Effectué le",
+    "Achieved": "Atteint",
     "Mode": "Mode",
     "None": "Aucun(e)",
     "{{ stars }} star": "{{ stars }} étoile",
